dark mode fix for ext-link-card embed

--- a/themes/h3tech-future-imperfect/static/css/dark.css
+++ b/themes/h3tech-future-imperfect/static/css/dark.css
@@ -26,7 +26,8 @@ img.fancybox-image:not(.dark-theme-ok) {
     -webkit-filter: invert(100%) hue-rotate(180deg) brightness(80%) contrast(85%);
 }
 
-img.small:not(.dark-theme-ok) {
+img.small:not(.dark-theme-ok),
+img.card-img-top {
     filter: invert(100%) hue-rotate(180deg) brightness(80%) contrast(85%);
     -webkit-filter: invert(100%) hue-rotate(180deg) brightness(80%) contrast(85%);
 }
